forth/test/fail/test_const_fold_rhs_mod_zero.af
use' ../../lang.af
fun: test_const_fold_rhs_mod_zero { val -- out } val 0 mod end
